--- a/hackerschool-weeklies/11.15-stm.md
+++ b/hackerschool-weeklies/11.15-stm.md
@@ -1,14 +1,17 @@
 # Software Transactional Memory #
 
 * Concurrent access to shared state is hard
+    * Mutexes, read-write locks, semaphores, lock-free algorithms, memory ordering semantics
 * Hard to think about, hard to code properly
 
-* STM is a way to move the complexity of shared state to the language
+* STM is a way to move the complexity of shared state to the language. 
+    * Optimistic (assumes no conflicts) rather than pessimistic (exclusive locking for any access)
 
 ## Features ##
 
-* Atomic commits
+* Atomic commits to outside observers (of multiple variables at once)
 * Snapshot of the world
 * Transparent retries
 
 # Developer happiness! #
+### Performance penalty :( ###
