--- a/hackerschool-weeklies/11.29-treedoc.md
+++ b/hackerschool-weeklies/11.29-treedoc.md
@@ -11,3 +11,5 @@ CRDTs are tricky---most natural operations aren't commutative
 * Treedoc implements an ordered set as a CRDT
 
 ![Treedoc backend](http://files.lfranchi.com/11.29-treedoc.png)
+
+[code here](https://github.com/lfranchi/droplet/blob/treedoc/src/droplet/datatypes/orderedset.clj)
